# CXP-Canary

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: Architecture.md  Roadmap.md
docs/plans/: 2026-02-24-repo-builder.md  2026-02-24-validator.md
src/cxp_canary/: __init__.py  builder.py  cli.py  evidence.py  models.py  reporter.py  validator.py
src/cxp_canary/formats/: __init__.py  claude_md.py  copilot_instructions.py  cursorrules.py
src/cxp_canary/objectives/: __init__.py  backdoor.py  exfil.py
src/cxp_canary/techniques/: __init__.py
tests/: test_builder.py  test_cli_campaigns.py  test_cli_generate.py  test_cli_record.py  test_cli_report.py  test_cli_validate.py  test_evidence.py  test_formats.py  test_models.py  test_objectives.py  test_reporter.py  test_techniques.py  test_validator.py
